Fixed vertical alignment for owner avatar within dataset or map

--- a/app/assets/stylesheets/new_common/datasets-list.css.scss
+++ b/app/assets/stylesheets/new_common/datasets-list.css.scss
@@ -95,7 +95,7 @@ $selectedItemPaddingOnSides: $sMargin-element - 1px;
 }
 .DatasetsList-itemTimeDiff .UserAvatar {
   margin-left: $sMargin-min;
-  line-height: $sAvatar-meta;
+  height: $sAvatar-meta + 2;
 }
 .DatasetsList-itemSource {
   @include display-flex();
